feat(core): achieve 85%+ test coverage across core Java modules, remediate issue #4 loop frontier advancement, and polish Maven Central release readiness
- Add comprehensive test suites across impulse-spec, impulse-api, impulse-storage, impulse-compiler, impulse-builder, impulse-vm (>85% instruction coverage)
- Remediate issue #4: Advance loop frontier with OP_MOV, calculate relative loop jumps, and implement transitive closure accumulation in repeatUntilStable
- Add end-to-end execution test vectors for bounded repeat and cyclic/DAG repeatUntilStable in ImpulseQueryCompilerTest
- Modernize Java 21 LTS FFM layout VarHandles, simple edge sources, and Cypher 1-token colon lookahead
- Clean repository hygiene: verify Spotless formatting, purge stray .class files, and configure .gitignore